Add more button styles to the css

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -65,3 +65,20 @@ body.wrong {
 .btn.wrong {
     background-color: rgb(150, 7, 7);
 }
+
+.start-btn, .next-btn {
+    font-size: 1.5rem;
+    font-weight: bold;
+    padding: 10px 20px;
+}
+
+.controls {
+    display: flex;
+    justify-self: center;
+    align-items: center;
+    
+}
+
+.hide {
+    display: none;
+}
