Add description to the css

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -37,7 +37,7 @@ body.wrong {
 .container {
     width: 800px;
     max-width: 80%;
-    background-color: #63e89e;
+    background-color: #63e4e8;
     border-radius: 5px;
     padding: 15px;
     box-shadow: 0 0 10px 2px;
