Updated media screen 315px & updated readMe

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -220,4 +220,13 @@ footer {
     h1 {
         font-size: 35px;
     }
+
+    .container {
+        height: fit-content;
+    }
+
+    .btn {
+        width: fit-content;
+        height: fit-content;
+    }
 }
