Added to the ReadME and cleaned up pages

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -116,7 +116,7 @@ footer {
     color: black;
 }
 
-/* Instructions section */
+/* Instructions page section */
 
 .intro-game .flex{
     width: 80%; 
