Updated css validation

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -80,7 +80,7 @@ body.wrong {
 }
 
 .btn {
-    border: 2px soild white;
+    border: 2px solid white;
     background-color: #ff7ee3;
     border-radius: 5px;
     padding: 10px 15px;
